--- a/frontend/styles/Accueil.module.css
+++ b/frontend/styles/Accueil.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  font-family: 'Arial';
+  font-family: 'Square';
   background-color: rgb(250, 248, 240);
   color: black;
 }
@@ -76,7 +76,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
   height: auto;
   width: 100vw;
   font-family: 'Arial';
