--- a/frontend/styles/BuyModal.module.css
+++ b/frontend/styles/BuyModal.module.css
@@ -1,10 +1,13 @@
 .modal {
   background: white;
-  width: 400px;
+  width: 500px;
   margin: auto;
   padding: 20px;
   border-radius: 8px;
   outline: none;
+  max-height: 700px;
+  overflow-y: auto;
+  scrollbar-color: black;
 }
 
 .modalHeader {
@@ -21,8 +24,8 @@
 }
 
 .productImage {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
   margin-right: 15px;
 }
@@ -38,8 +41,8 @@
 }
 
 .recommendationImage {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   object-fit: cover;
   margin-right: 10px;
 }
