--- a/frontend/styles/Shop.module.css
+++ b/frontend/styles/Shop.module.css
@@ -1,82 +1,17 @@
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   width: 100vw;
   font-family: 'Square';
-  background-color: rgb(250, 248, 240);
-  color: black;
-}
-
-.button {
-  background-color: '#f44336';
-  color: 'white';
-  padding: '10px 20px';
-  border-radius: '5px';
-  border: 'none';
-  cursor: 'pointer';
-  font-size: '16px';
-}
-
-.containerSearch {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  height: 40vh;
-  width: 100vw;
-  font-family: 'Arial';
   background-color: rgb(214, 208, 187);
   color: black;
-  gap: 20px;
-}
-
-.inputSearch {
-  height: 5vh;
-  width: 30vw;
-}
-
-.btnInscription {
-  background-color: #D9D1B5;
-  color: #2B2B2B;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 20px;
-  font-size: 18px;
-  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.btnInscription:hover {
-  transform: translateY(-2px);
-  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.3);
-}
-
-.btnConnexion {
-  background-color: #B8C2AE;
-  color: #2B2B2B;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 20px;
-  font-size: 18px;
-  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.btnConnexion:hover {
-  transform: translateY(-2px);
-  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.3);
-
 }
 
 .containerProduct {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 20px;
@@ -85,4 +20,51 @@
   font-family: 'Arial';
   background-color: rgb(214, 208, 187);
   color: black;
+  border: solid rgb(255, 0, 208) 1px;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+.cartItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.cartItemImage {
+  width: 100px;
+  height: auto;
+  margin-right: 20px;
+}
+
+.cartSummary {
+  margin-top: 30px;
+  font-size: 18px;
+  text-align: right;
+}
+
+.button {
+  margin-left: auto;
+  background-color: #007bff;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button:disabled {
+  background-color: #ccc;
+}
+
+.quantityControls {
+  display: flex;
+  align-items: center;
+}
+
+.quantityControls button {
+  width: 30px;
+  height: 30px;
+  font-size: 18px;
 }
