mise en place des likes et sauvegarde dans redux

--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -41,6 +41,8 @@
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   margin-top: 30px;
+  gap: 20px;
+
 }
 
 .btnConnexion:hover {
