--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -1,10 +1,10 @@
 .Container {
   display: flex;
   padding: 0 20px;
-  margin: 0px;
+  margin: 0;
   align-items: center;
   justify-content: space-between;
-  height: 25vh;
+  height: 35vh;
   width: 100vw;
   font-family: 'Arial';
   background-color: rgb(214, 208, 187);
@@ -44,6 +44,7 @@
   gap: 20px;
 
 }
+
 
 .btnConnexion:hover {
   transform: translateY(-2px);
@@ -154,6 +155,7 @@
 .text {
   font-size: 20px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .cart {
