--- a/frontend/styles/Shop.module.css
+++ b/frontend/styles/Shop.module.css
@@ -29,12 +29,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: auto;
+  width: 60vw;
   margin-bottom: 20px;
+  border: solid red 1px;
 }
 
 .cartItemImage {
-  width: 100px;
-  height: auto;
+  width: 200px;
+  height: 200px;
   margin-right: 20px;
 }
 
@@ -78,4 +81,61 @@
   border-radius: 20px;
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+
+.modalContent {
+  background-color: white;
+  padding: 30px;
+  border-radius: 15px;
+  width: 400px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.StripeElement {
+  margin: 10px 0 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+
+.button {
+  background-color: #0070f3;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.button:hover {
+  background-color: #005bb5;
+}
+
+.button:disabled {
+  background-color: #d3d3d3;
+  cursor: not-allowed;
+}
+
+.button,
+.button {
+  margin-left: 10px;
 }
