--- a/frontend/styles/Shop.module.css
+++ b/frontend/styles/Shop.module.css
@@ -4,7 +4,6 @@
   font-family: 'Square';
   background-color: rgb(214, 208, 187);
   color: black;
-  cursor: pointer;
 }
 
 .containerProduct {
@@ -17,12 +16,12 @@
   gap: 20px;
   height: auto;
   width: 100vw;
-  font-family: 'Arial';
+  font-family: 'Roboto', sans-serif;
   background-color: rgb(214, 208, 187);
   color: black;
-  border: solid rgb(255, 0, 208) 1px;
   margin-bottom: 100px;
   margin-top: 100px;
+
 }
 
 .cartItem {
@@ -32,13 +31,40 @@
   height: auto;
   width: 60vw;
   margin-bottom: 20px;
-  border: solid red 1px;
+  border-bottom: 4px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 5px;
+}
+
+.designation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.action {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 20px;
+  padding-top: 10px;
+}
+
+.delete {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 10px;
+  padding-top: 10px;
+
 }
 
 .cartItemImage {
   width: 200px;
   height: 200px;
   margin-right: 20px;
+  border-radius: 20%;
 }
 
 .cartSummary {
@@ -51,11 +77,12 @@
   margin-left: auto;
   background-color: #007bff;
   color: white;
-  padding: 5px 10px;
+  padding: 25px 25px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
+
 
 .button:disabled {
   background-color: #ccc;
@@ -83,6 +110,45 @@
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
+
+.button {
+  background-color: #B8C2AE;
+  color: #2B2B2B;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  cursor: pointer;
+
+}
+
+.button:hover {
+  background-color: #727e651c;
+}
+
+.button:disabled {
+  background-color: #d3d3d3;
+  cursor: not-allowed;
+}
+
+.button,
+.button {
+  margin-left: 10px;
+}
+
+.panierVide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 80vh;
+  width: 100vw;
+  font-family: 'Roboto', sans-serif;
+  background-color: rgb(214, 208, 187);
+  color: black;
+  font-size: 20px;
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -97,45 +163,38 @@
 }
 
 
+
 .modalContent {
-  background-color: white;
-  padding: 30px;
-  border-radius: 15px;
-  width: 400px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 400px;
   text-align: center;
+  width: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  font-family: Arial, sans-serif;
 }
 
-.StripeElement {
-  margin: 10px 0 20px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
+.modalContent h2 {
+  color: #30313d;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
-
-.button {
-  background-color: #0070f3;
-  color: white;
-  padding: 10px 15px;
+.modalContent button {
+  background-color: #B8C2AE;
+  font-size: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  color: black;
   border: none;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: 4px;
   cursor: pointer;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
-.button:hover {
-  background-color: #005bb5;
-}
-
-.button:disabled {
-  background-color: #d3d3d3;
-  cursor: not-allowed;
-}
-
-.button,
-.button {
-  margin-left: 10px;
+.modalContent button:hover {
+  background-color: #c3c3c3;
 }
