--- a/frontend/styles/Accueil.module.css
+++ b/frontend/styles/Accueil.module.css
@@ -86,3 +86,65 @@
   background-color: rgb(214, 208, 187);
   color: black;
 }
+
+.mystere {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px 20px;
+}
+
+.productVideo {
+  display: flex;
+  justify-content: center;
+  height: 80vh;
+  width: 80vw;
+  align-items: center;
+}
+
+.cv {
+  display: flex;
+  height: 600px;
+  width: 600px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px;
+}
+
+.imageContainer {
+  position: relative;
+  display: inline-block;
+}
+
+
+.zoomIcon {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  font-size: 24px;
+  color: #fff;
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 4px;
+  border-radius: 50%;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.zoomedImage {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 8px;
+}
