--- a/frontend/styles/Header.module.css
+++ b/frontend/styles/Header.module.css
@@ -12,6 +12,14 @@
 
 }
 
+.connect {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
+
+}
+
 .btnInscription {
   background-color: #D9D1B5;
   color: #2B2B2B;
@@ -22,7 +30,7 @@
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  gap: 20px;
+
 }
 
 .btnInscription:hover {
@@ -40,9 +48,6 @@
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  margin-top: 30px;
-  gap: 20px;
-
 }
 
 
