--- a/frontend/styles/BuyModal.module.css
+++ b/frontend/styles/BuyModal.module.css
@@ -75,6 +75,37 @@
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-.viewCartButton {
-  background-color: #ffc107;
+.addToCartButton {
+  display: flex;
+  align-items: center;
+  transition: all 0.3s ease;
+}
+
+.addToCartButton .addIcon,
+.addToCartButton .addedIcon {
+  margin-right: 5px;
+}
+
+.addToCartButton.added {
+  background-color: #4CAF50 !important;
+  /* Utilisé pour tester uniquement */
+  color: white !important;
+}
+
+.addToCartButton.added .addedIcon {
+  animation: pulse 0.3s ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
