--- a/frontend/styles/Login.module.css
+++ b/frontend/styles/Login.module.css
@@ -70,6 +70,7 @@
   font-size: 18px;
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  margin-top: 30px;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   gap: 80px;
 }
